force-app/main/default/objects/Ordonnance__c/fields/Type_de_PEI__c.field-meta.xml
<CustomField>
    <fullName>Type_de_PEI__c</fullName>
    <label>Type de PEI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Avec trous</fullName>
            </value>
            <value>
                <fullName>Sans trous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>