force-app/main/default/objects/Ordonnance__c/fields/Type_de_pr_paration__c.field-meta.xml
<CustomField>
    <fullName>Type_de_pr_paration__c</fullName>
    <label>Type de préparation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Limite sous gingival</fullName>
            </value>
            <value>
                <fullName>Limite juxta gingival</fullName>
            </value>
            <value>
                <fullName>limite supra gingival</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>