force-app/main/default/objects/Ordonnance__c/fields/Urgence_Paris__c.field-meta.xml
<CustomField>
    <fullName>Urgence_Paris__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Urgence Paris</label>
    <type>Checkbox</type>
</CustomField>