force-app/main/default/objects/Ordonnance__c/fields/X11__c.field-meta.xml
<CustomField>
    <fullName>X11__c</fullName>
    <label>11</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Refs_Inlay_core</valueSetName>
    </valueSet>
</CustomField>