force-app/main/default/objects/Ordonnance__c/fields/X13__c.field-meta.xml
<CustomField>
    <fullName>X13__c</fullName>
    <label>13</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Refs_Inlay_core</valueSetName>
    </valueSet>
</CustomField>