force-app/main/default/objects/Ordonnance__c/recordTypes/Brouillon.recordType-meta.xml
<RecordType>
    <fullName>Brouillon</fullName>
    <active>true</active>
    <label>Brouillon</label>
</RecordType>