force-app/main/default/objects/Ordonnance__c/recordTypes/Brouillon_finition.recordType-meta.xml
<RecordType>
    <fullName>Brouillon_finition</fullName>
    <active>true</active>
    <label>Brouillon finition</label>
</RecordType>