force-app/main/default/objects/Ordonnance__c/recordTypes/Brouillon_IC_numerique.recordType-meta.xml
<RecordType>
    <fullName>Brouillon_IC_numerique</fullName>
    <active>true</active>
    <label>Brouillon IC numérique</label>
</RecordType>