force-app/main/default/objects/Ordonnance__c/recordTypes/Brouillon_refaire.recordType-meta.xml
<RecordType>
    <fullName>Brouillon_refaire</fullName>
    <active>true</active>
    <label>Brouillon à refaire</label>
</RecordType>