force-app/main/default/objects/Ordonnance__c/recordTypes/Valid_e_finition.recordType-meta.xml
<RecordType>
    <fullName>Valid_e_finition</fullName>
    <active>true</active>
    <label>Validée finition</label>
</RecordType>