force-app/main/default/objects/Ordonnance__c/recordTypes/Valid_e_refaire.recordType-meta.xml
<RecordType>
    <fullName>Valid_e_refaire</fullName>
    <active>true</active>
    <label>Validée à refaire</label>
</RecordType>