force-app/main/default/objects/Ordonnance__c/recordTypes/Validee.recordType-meta.xml
<RecordType>
    <fullName>Validee</fullName>
    <active>true</active>
    <label>Validée</label>
</RecordType>