force-app/main/default/objects/Ordonnance__c/validationRules/Date_livraison_different_dimanche.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_livraison_different_dimanche</fullName>
    <active>true</active>
    <errorConditionFormula>MOD( Date__c - DATE(1900, 1, 7), 7)= 0</errorConditionFormula>
    <errorDisplayField>Date__c</errorDisplayField>
    <errorMessage>La commande ne peut pas être livrée le dimanche.</errorMessage>
</ValidationRule>