force-app/main/default/objects/Ordonnance__c/validationRules/Suppression_ordonnance_validee.validationRule-meta.xml
<ValidationRule>
    <fullName>Suppression_ordonnance_validee</fullName>
    <active>false</active>
    <description>blocage de la suppression d&apos;ordonnance validée pour les user comunity</description>
    <errorConditionFormula>not(ISNULL( Dossier__c ))</errorConditionFormula>
    <errorMessage>Vous ne pouvez pas supprimer une ordonnance validée, merci de contacter le service client Dentego Lab</errorMessage>
</ValidationRule>