force-app/main/default/objects/Ordonnance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Patient__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Date__c</columns>
    <columns>Statut__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Centre__c</columns>
    <columns>Commentaires__c</columns>
    <columns>Statut_du_dossier__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <language>fr</language>
</ListView>