force-app/main/default/objects/Ordonnance__c/listViews/Commandes_archiv_es.listView-meta.xml
<ListView>
    <fullName>Commandes_archiv_es</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Statut__c</columns>
    <columns>Patient__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Date__c</columns>
    <columns>Date_d_expedition__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>Expédiée,Reçue,Rejetée</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessThan</operation>
        <value>LAST_N_DAYS:60</value>
    </filters>
    <label>Commandes archivées</label>
</ListView>