force-app/main/default/objects/Ordonnance__c/listViews/Commandes_archiv_es_empreinte_3D.listView-meta.xml
<ListView>
    <fullName>Commandes_archiv_es_empreinte_3D</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Statut__c</columns>
    <columns>Patient__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Date__c</columns>
    <columns>Date_pr_visionnelle_de_livraison__c</columns>
    <columns>Categorie__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Empreinte_numerique__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessThan</operation>
        <value>LAST_N_DAYS:60</value>
    </filters>
    <label>Commandes archivées (empreinte 3D )</label>
</ListView>