force-app/main/default/objects/Ordonnance__c/listViews/Commandes_en_cours_b.listView-meta.xml
<ListView>
    <fullName>Commandes_en_cours_b</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Statut__c</columns>
    <columns>Patient__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Date__c</columns>
    <columns>Date_pr_visionnelle_de_livraison__c</columns>
    <columns>Categorie__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>Brouillon</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:60</value>
    </filters>
    <label>Commandes en cours (Brouillons)</label>
</ListView>