force-app/main/default/objects/Ordonnance__c/listViews/Commandes_en_cours_de_v_rification.listView-meta.xml
<ListView>
    <fullName>Commandes_en_cours_de_v_rification</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Statut__c</columns>
    <columns>Patient__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Date__c</columns>
    <columns>Date_d_expedition__c</columns>
    <columns>Mode_de_livraison__c</columns>
    <columns>Categorie__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>En cours de vérification</value>
    </filters>
    <label>Commandes en cours de vérification</label>
</ListView>