force-app/main/default/objects/Ordonnance__c/listViews/Commandes_exp_di_es_ce_jour.listView-meta.xml
<ListView>
    <fullName>Commandes_exp_di_es_ce_jour</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Statut__c</columns>
    <columns>Patient__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Date__c</columns>
    <columns>Date_d_expedition__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>Expédiée</value>
    </filters>
    <filters>
        <field>Date_d_expedition__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Commandes expédiées ce jour</label>
</ListView>